--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   hive_flutter: ^1.1.0
   liquid_pull_to_refresh: ^3.0.1
   fl_chart: ^0.63.0
+  smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.3.5
 
 
 
